refactor to TextFinderByOrig.java